--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,13 +134,14 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!--    <Button-->
-        <!--        android:id="@+id/btn1"-->
-        <!--        app:layout_constraintTop_toTopOf="parent"-->
-        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--        android:layout_width="wrap_content"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        android:text="업데이트"/>-->
+            <Button
+                android:id="@+id/btn1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="업데이트"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
