--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.dustalarm.viewmodel.MainActivityViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        tools:context=".view.MainActivity"
-        android:background="@{viewModel.dustBackgroundColor.intValue()}"
-        >
+        android:layout_height="match_parent"
+        android:background="@{viewModel.viewResources.backgroundColor}"
+        tools:context=".view.MainActivity">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/dustStateFace"
+            imageResource="@{viewModel.viewResources.resId}"
             android:layout_width="240dp"
             android:layout_height="240dp"
-            imageResource="@{viewModel.dustImg}"
-            android:id="@+id/dustStateFace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -29,17 +29,18 @@
             app:layout_constraintVertical_bias="0.5">
 
         </androidx.appcompat.widget.AppCompatImageView>
+
         <TextView
             android:id="@+id/mLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@{viewModel.address.addr}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.18"
-            android:text="@{viewModel.dustInfo.location}"
             tools:text="지역">
 
         </TextView>
@@ -54,10 +55,11 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0">
+
             <TextView
-                android:gravity="center"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="미세먼지"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.2"
@@ -65,37 +67,39 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.4" />
+
             <TextView
-                android:gravity="center"
                 android:id="@+id/pm10"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{viewModel.dustInfo.pm10Value}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5"
-                android:text="@{viewModel.dustInfo.pm10Value}"
-                tools:text="미세먼지 값"/>
+                tools:text="미세먼지 값" />
 
             <TextView
-                android:gravity="center"
                 android:id="@+id/pm10_state"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{viewModel.dustInfo.pm10State}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.6"
-                android:text="@{viewModel.dustInfo.pm10State}"
-                tools:text="미세먼지 상태"/>
+                tools:text="미세먼지 상태" />
+
             <TextView
-                android:gravity="center"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="초미세먼지"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.8"
@@ -105,48 +109,47 @@
                 app:layout_constraintVertical_bias="0.4"
 
                 />
+
             <TextView
-                android:gravity="center"
                 android:id="@+id/pm25"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{viewModel.dustInfo.pm25Value}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.8"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5"
-                android:text="@{viewModel.dustInfo.pm25Value}"
-                tools:text="초미세먼지 값"/>
+                tools:text="초미세먼지 값" />
 
             <TextView
-                android:gravity="center"
                 android:id="@+id/pm25_state"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{viewModel.dustInfo.pm25State}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.8"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.6"
-                android:text="@{viewModel.dustInfo.pm25State}"
-                tools:text="초미세먼지 상태"
-                />
+                tools:text="초미세먼지 상태" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <Button
-                android:id="@+id/btn1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{()->viewModel.load()}"
-                android:text="업데이트"/>
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->viewModel.load()}"
+            android:text="업데이트"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </layout>
